# nodmod

./: .gitignore  CHANGELOG.md  LICENSE  README.md  enhancement_plan.md  pyproject.toml  requirements.txt  s3m_plan.md  setup.cfg
.github/workflows/: ci.yml  lint.yml  publish.yml
dev/: test_ascii_api.py  test_coordinate_api_consistency.py  test_effect_codec.py  test_full_suite.py  test_mod_basic.py  test_mod_pcm_helpers.py  test_mod_restart_position.py  test_probe_api.py  test_s3m_basic.py  test_s3m_load_all.py  test_s3m_pattern_decode.py  test_s3m_roundtrip_write.py  test_s3m_sample_api.py  test_s3m_timing_functions.py  test_song_base.py  test_types_basic.py  test_views_api.py  test_xm_basic.py  test_xm_instruments.py  test_xm_roundtrip_write.py
docs/: xm.txt
music/: catch_22.xm  spice_it_up.mod
src/nodmod/: __init__.py  effects.py  loader.py  modsong.py  probe.py  s3msong.py  song.py  types.py  views.py  xmsong.py
tests/: conftest.py  test_ascii_api.py  test_coordinate_api_consistency.py  test_effect_codec.py  test_effect_views_api.py  test_equivalence_music_fixtures.py  test_helpers.py  test_load_song_api.py  test_mod_basic.py  test_mod_load_metadata.py  test_mod_pcm_helpers.py  test_mod_restart_position.py  test_mod_sample_api.py  test_mod_sample_loop_safety.py  test_mod_sample_memory_resolution.py  test_mod_sample_memory_stress.py  test_modnote_alias.py  test_note_editing.py  test_plan_api.py  test_playback_rows_api.py  test_probe_api.py  test_python_compat_guardrails.py  test_row_views_api.py  test_s3m_basic.py  test_s3m_pattern_decode.py  test_s3m_roundtrip_write.py  test_s3m_sample_api.py  test_s3m_timing_functions.py  test_song_base.py  test_types_basic.py  test_used_resources_scope.py  test_views_api.py  test_wav_fixture_hashes.py  test_xm_basic.py  test_xm_copy_instrument.py  test_xm_instrument_api.py  test_xm_instrument_raw.py  test_xm_instruments.py  test_xm_sample_duration.py  test_xm_sample_io.py
