[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodmod"
version = "1.0.0"
description = "Read, edit, and write tracker modules (MOD, XM, S3M)."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Emanuele Rodolà", email = "e.rodola@gmail.com"}
]
requires-python = "==3.11.*"
dependencies = [
    "pydub>=0.25.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
