[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodmod"
version = "1.0.3"
description = "Read, edit, and write tracker modules (MOD, XM, S3M)."
readme = "README.md"
license = "MIT"
authors = [
    {name = "Emanuele Rodolà", email = "e.rodola@gmail.com"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pydub>=0.25.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]

[tool.ruff.lint.per-file-ignores]
"src/nodmod/__init__.py" = ["F403"]
