[metadata]
name = nodmod
description = "A library to manipulate Amiga .MOD files"
url = ""
long_description = file: README.md
author = Emanuele Rodolà
author_email = e.rodola@gmail.com
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md
