[metadata]
name = nodmod
version = 0.1.0
description = "A library to manipulate Amiga .MOD files"
long_description = file: README.md
long_description_content_type = text/markdown
url = ""
author = Emanuele Rodolà
author_email = e.rodola@gmail.com
keywords = python, Amiga, MOD, audio, music, trackers
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    numpy==1.23.5
    pydub==0.25.1

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md
